lib_LTLIBRARIES = libMoBaCommon.la
libMoBaCommon_la_SOURCES = src/log.cpp src/jsonstreamreadersocket.cpp src/jsonmsgencoder.cpp src/version.cpp src/jsonmsgdecoder.cpp src/msghandler.cpp src/message.cpp src/helper.cpp src/jsondecoder.cpp
otherincludedir = $(includedir)/moba
otherinclude_HEADERS = src/jsonabstractitem.h src/jsonmsgdecoder.h src/jsonstreamreader.h src/log.h src/msghandler.h src/helper.h src/jsondecoder.h src/jsonmsgencoder.h src/jsonstreamreadersocket.h src/message.h src/version.h src/atomic.h
ACLOCAL_AMFLAGS = -I m4

